# eng_struct_tools

./: .gitignore  README.md  babel.cfg  pyproject.toml
locales/: eng_struct_tools.pot
locales/es_ES/LC_MESSAGES/: eng_struct_tools.po
locales/fr_FR/LC_MESSAGES/: eng_struct_tools.po
scripts/: setup_i18n.py  update_translations.py
src/eng_struct_tools/core_app/: config.py  i18n_manager.py  l10n_utils.py  main.py  plugin_base.py  plugin_manager.py
src/eng_struct_tools/plugins/footing_design/: __init__.py  main.py
src/eng_struct_tools/plugins/footing_design/locales/es_ES/LC_MESSAGES/: footing_design.po
src/eng_struct_tools/shared_libs/: common_ui_widgets.py  ifc_utils.py  unit_converter.py
src/eng_struct_tools/tools/: i18n_cli.py  translation_manager.py
tests/: test_config_manager.py  test_i18n_manager.py  test_l10n_utils.py  test_plugin_base.py  test_translation_manager.py  test_unit_converter.py
