[project]
name = "eng-struct-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Neil Murray",email = "neilmrr75@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt5 (>=5.15.11,<6.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
